WIP more sockets, implementing GPT2

--- a/config.json
+++ b/config.json
@@ -23,5 +23,9 @@
             "commands": ["hello", "goodbye", "chat"],
             "showingui": true
         }
+    },
+    "GPT2Server": {
+        "host": "localhost",
+        "port": 5002
     }
 }
