--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
     "Manager": {
         "host": "localhost",
         "port": 5000,
-        "stopbotsonshutdown": true
+        "stopbotsonshutdown": true,
+        "pythonpath": "venv/Scripts/python.exe"
     },
     "GUI": {
         "host": "localhost",
